--- a/polygons/main.css
+++ b/polygons/main.css
@@ -22,6 +22,16 @@ body {
     color: #131313;
 }
 
+.main {
+    width: 60vw;
+    margin: 0 auto;
+}
+
+img {
+    height: 100%;
+    width: 100%;
+}
+
 @media (min-width: 321px) {
     html {
         --gutter: 1rem;
@@ -37,70 +47,8 @@ body {
     }
 
     .main {
-        width: 60vmin;
+        width: 100%;
         height: 95vmin;
     }
 }
-
-.main {
-    padding: var(--gutter);
-    display: grid;
-    grid-gap: var(--gutter);
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(6, 1fr);
-    margin: 0 auto;
-    width: 80vmin;
-    height: 125vmin;
-    background: var(--blue);
-}
-
-.main section {
-    background: var(--blue);
-    border-top: 1px solid var(--lines);
-    border-left: 1px solid var(--lines);
-    position: relative;
-}
-
-section::before {
-    content: '';
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    width: 50%;
-    height: 50%;
-    border-top: 1px solid var(--lines2);
-    border-left: 1px solid var(--lines2);
-}
-
-section::after {
-    content: '';
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
-    width: 20%;
-    height: 1rem;
-    background-image: repeating-linear-gradient(90deg, transparent, transparent 1px, var(--lines) 1px, var(--lines) 4px, transparent 4px, transparent 6px);
-}
-
-section:nth-child(1) {
-    grid-row: 2 / 6;
-    grid-column: 2 / 4;
-}
-
-section:nth-child(2) {
-    grid-row: 5 / 6;
-    grid-column: 1;
-}
-
-section:nth-child(3) {
-    grid-row: 4 / 4;
-    grid-column: 1;
-    transform-origin: bottom right;
-}
-
-section:nth-child(4) {
-    grid-row: 4 / 6;
-    grid-column: 4 / 6;
-}
-
 
